added phase 1 but  not in order

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <body>
     <canvas></canvas>
     <button type="submit" class="nextbutton">Next</button>
+    <button type="submit" class="backbutton">Back</button>
     <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
     <button type="button" name="spanish" id="2" class="language spanish">Spanish</button>
+    <button type="button" name="french" id="3" class="language french">French</button>
+    <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
+    <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
     <input type="text" name="" value="" id="textinput">
     <script type="application/javascript" src="lib/bundle.js"></script>
     <script
