--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>Phrase Master</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+    <script type='text/javascript' src='config.js'></script>
+    <script type="application/javascript" src="lib/bundle.js"></script>
   </head>
 
   <body>
@@ -14,10 +20,5 @@
     <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
     <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
     <input type="text" name="" value="" id="textinput">
-    <script type="application/javascript" src="lib/bundle.js"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
   </body>
 </html>
