--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Phrase Master</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <script
@@ -12,8 +13,8 @@
 
   <body>
     <canvas></canvas>
-    <button type="submit" class="nextbutton">Next</button>
-    <button type="submit" class="backbutton">Back</button>
+    <button type="submit" id="next" class="nextbutton">Next</button>
+    <button type="submit" id="back" class="backbutton">Back</button>
     <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
     <button type="button" name="spanish" id="2" class="language spanish">Spanish</button>
     <button type="button" name="french" id="3" class="language french">French</button>
