phase 2 logic and scoring

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <canvas></canvas>
+    <canvas id="myCanvas"></canvas>
     <button type="submit" id="next" class="nextbutton">Next</button>
     <button type="submit" id="back" class="backbutton">Back</button>
     <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
