--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <canvas id="myCanvas"></canvas>
     <button type="submit" id="next" class="nextbutton">Next</button>
-    <button type="submit" id="back" class="backbutton">Back</button>
+    <button type="submit" id="back" class="backbutton">Restart</button>
     <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
     <button type="button" name="spanish" id="2" class="language spanish">Spanish</button>
     <button type="button" name="french" id="3" class="language french">French</button>
