--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button type="button" name="french" id="3" class="language french">French</button>
     <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
     <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
+    <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
     <input type="text" name="" value="" id="textinput">
   </body>
 </html>
