added 5 languages and favicon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button type="button" name="french" id="3" class="language french">French</button>
     <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
     <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
-    <button type="button" name="vietnamese" id="6" class="language vietnamese">Vietnamese</button>
+    <button type="button" name="irish" id="6" class="language irish">Irish</button>
     <button type="button" name="italian" id="7" class="language italian">Italian</button>
     <button type="button" name="german" id="8" class="language german">German</button>
     <button type="button" name="maori" id="9" class="language maori">Maori</button>
