--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <input type="text" name="" value="" id="textinput">
     </div>
     <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
+    <button type="button" name="replay" id="replay" class="hidden">Play Again?</button>
     <div class="findus">
       <div class="floatright">
           <h2>Find Me</h2>
@@ -50,8 +51,8 @@
             <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506613723/linkedin_circle_black-512_tvuepk.png"/>
             <p>LinkedIn</p>
           </a>
-          <a href="https://github.com/Mikequint94/MakeAnything" target="_blank">
-            <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506614644/Logo_Make_Anything_Robot_blackicon_a9hmif.png"/>
+          <a href="https://github.com/Mikequint94/PhraseMaster" target="_blank">
+            <img src="http://res.cloudinary.com/make-anything/image/upload/c_scale,h_30/v1507275303/PMLogopxlrSquareBW2_zcnwm5.png"/>
             <p>PhraseMaster</p>
           </a>
       </div>
