--- a/index.html
+++ b/index.html
@@ -12,50 +12,53 @@
   </head>
 
   <body>
-    <div>
+    <div class="logo">
       <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,h_240/v1507269267/PMLogopxlr3_w5zkv3.png" />
     </div>
-    <canvas id="myCanvas"></canvas>
+    <div class="centerhor">
+      <canvas id="myCanvas"></canvas>
 
-    <div class="chooselang1">
-      <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
-      <button type="button" name="spanish" id="2" class="language spanish">Spanish</button>
-      <button type="button" name="french" id="3" class="language french">French</button>
-      <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
-      <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
-    </div>
-    <div class="chooselang2">
-      <button type="button" name="irish" id="6" class="language irish">Irish</button>
-      <button type="button" name="italian" id="7" class="language italian">Italian</button>
-      <button type="button" name="german" id="8" class="language german">German</button>
-      <button type="button" name="maori" id="9" class="language maori">Maori</button>
-      <button type="button" name="afrikaans" id="10" class="language afrikaans">Afrikaans</button>
-    </div>
-    <div class="backnext">
-      <button type="submit" id="back" class="backbutton">Restart</button>
-      <button type="submit" id="next" class="nextbutton">Next</button>
-    </div>
-    <div class="inputsection">
-      <input type="text" name="" value="" id="textinput">
-    </div>
-    <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
-    <button type="button" name="replay" id="replay" class="hidden">Play Again?</button>
-    <div class="findus">
-      <div class="floatright">
-          <h2>Find Me</h2>
-          <a href="https://github.com/Mikequint94" target="_blank">
-            <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506612881/25231_albynd.png"/>
-            <p>GitHub</p>
-          </a>
-          <a href="https://www.linkedin.com/in/michael-quint-6a114499/" target="_blank">
-            <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506613723/linkedin_circle_black-512_tvuepk.png"/>
-            <p>LinkedIn</p>
-          </a>
-          <a href="https://github.com/Mikequint94/PhraseMaster" target="_blank">
-            <img src="http://res.cloudinary.com/make-anything/image/upload/c_scale,h_30/v1507275303/PMLogopxlrSquareBW2_zcnwm5.png"/>
-            <p>PhraseMaster</p>
-          </a>
+      <div class="chooselang1">
+        <button type="button" name="swedish" id="1" class="language swedish">Swedish</button>
+        <button type="button" name="spanish" id="2" class="language spanish">Spanish</button>
+        <button type="button" name="french" id="3" class="language french">French</button>
+        <button type="button" name="swahili" id="4" class="language swahili">Swahili</button>
+        <button type="button" name="dutch" id="5" class="language dutch">Dutch</button>
       </div>
-    </div>
+      <div class="chooselang2">
+        <button type="button" name="irish" id="6" class="language irish">Irish</button>
+        <button type="button" name="italian" id="7" class="language italian">Italian</button>
+        <button type="button" name="german" id="8" class="language german">German</button>
+        <button type="button" name="maori" id="9" class="language maori">Maori</button>
+        <button type="button" name="afrikaans" id="10" class="language afrikaans">Afrikaans</button>
+      </div>
+      <div class="backnext">
+        <button type="submit" id="back" class="backbutton">Restart</button>
+        <button type="submit" id="next" class="nextbutton">Next</button>
+      </div>
+      <div class="inputsection">
+        <input type="text" name="" value="" id="textinput">
+      </div>
+      <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
+      <button type="button" name="replay" id="replay" class="hidden">Play Again?</button>
+      </div>
+      <div class="findus">
+        <div class="floatright">
+            <h2>Find Me</h2>
+            <a href="https://github.com/Mikequint94" target="_blank">
+              <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506612881/25231_albynd.png"/>
+              <p>GitHub</p>
+            </a>
+            <a href="https://www.linkedin.com/in/michael-quint-6a114499/" target="_blank">
+              <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506613723/linkedin_circle_black-512_tvuepk.png"/>
+              <p>LinkedIn</p>
+            </a>
+            <a href="https://github.com/Mikequint94/PhraseMaster" target="_blank">
+              <img src="http://res.cloudinary.com/make-anything/image/upload/c_scale,h_30/v1507275303/PMLogopxlrSquareBW2_zcnwm5.png"/>
+              <p>PhraseMaster</p>
+            </a>
+        </div>
+      </div>
+
   </body>
 </html>
