--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       </div>
       <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
       <button type="button" name="replay" id="replay" class="hidden">Play Again?</button>
+      <div id="answer-list">
+        
+      </div>
       </div>
       <div class="findus">
         <div class="floatright">
