--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </div>
       <button type="button" name="phase3" id="largelanguage" class="hidden"></button>
       <button type="button" name="replay" id="replay" class="hidden">Play Again?</button>
-      <div id="answer-list">
-        
+      <div id="answer-list" class="hiddenheight">
+
       </div>
       </div>
       <div class="findus">
