--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     crossorigin="anonymous"></script>
     <script type='text/javascript' src='config.js'></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107687578-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-107687578-1');
+    </script>
+
   </head>
 
   <body>
