added link to portfolio page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       <div class="findus">
         <div class="floatright">
             <h2>Find Me</h2>
+            <a href="http://www.mquint.com" target="_blank">
+              <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1513658402/MeFavicon_iujckf.png"/>
+              <p>Portfolio</p>
+            </a>
             <a href="https://github.com/Mikequint94" target="_blank">
               <img src="https://res.cloudinary.com/make-anything/image/upload/c_scale,w_30/v1506612881/25231_albynd.png"/>
               <p>GitHub</p>
